# OMPIStore

./: CMakeLists.txt  README.md  client.cpp  common.h  coordinator.cpp  coordinator.h  logger.cpp  logger.h  main  main.cpp  makefile  node.cpp  node.h  performance_log.txt  shard.cpp  shard.h
include/client/: client.h
include/common/: client_request_utils.h  client_response_utils.h  logger.h  mpi_manager.h  node_request_utils.h  node_response_utils.h  types.h
include/coordinator/: coordinator.h
src/: main.cpp
src/client/: client.cpp
src/common/: client_request_utils.cpp  client_response_utils.cpp  logger.cpp  mpi_manager.cpp  node_request_utils.cpp  node_response_utils.cpp
src/coordinator/: coordinator.cpp
src/node/: node.cpp
